# fcn_detector

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
launch/: fcn_object_detector.launch  fcn_object_detector_chainer.launch  fcn_object_detector_nvcaffe.launch
models/3class_detector/: deploy.prototxt  train_val.prototxt
models/8class_detector/: solver.prototxt  train_val.prototxt
models/nvcaffe/3class_detector/: solver.prototxt
models/nvcaffe/8class_detector/: deploy.prototxt  info.json  original.prototxt  solver.prototxt  train_val.prototxt
msg/: Box.msg  BoxArray.msg  ScoredBoxArray.msg
scripts/: install_model.py  object_detector.py
scripts/chainer/: object_detector_chainer.py  train.py  train_utils.py
scripts/nvcaffe/: object_detector_nvcaffe.py
